--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			</div>
 		</main>
 
+		<a class="link" href="https://github.com/alicoder5/WebBrainG5Project">Open Source code</a>
 		<script src="scripts/index.js"></script>
 	</body>
 </html>
