--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	</head>
 	<body>
 		<header>
-			<input type="text" id="input" placeholder="Enter the Name" />
+			<input type="text" id="input" placeholder="Enter the secret key" />
+			<button onclick="render()">Search the key</button>
 		</header>
 
 		<main id="main">
@@ -26,7 +27,6 @@
 			</div>
 		</main>
 
-		<a class="link" href="https://github.com/alicoder5/WebBrainG5Project">Open Source code</a>
 		<script src="scripts/index.js"></script>
 	</body>
 </html>
