--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 			<input type="text" id="input" placeholder="Enter the secret key" />
-			<button onclick="render()">Search the key</button>
+			<button onclick="render()">Search</button>
 		</header>
 
 		<main id="main">
